--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "recharts": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "use-media": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
